# FileFiller

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-build.yml
examples/: CMakeLists.txt
examples/example-c/: CMakeLists.txt  main.c
examples/example-swift/: main.swift
examples/example-swift/FileFiller-swift/: FileFiller-swift-Bridging-Header.h
examples/example-swift/FileFiller-swift/FileFiller-swift.xcodeproj/: project.pbxproj
examples/example-swift/FileFiller-swift/FileFiller-swift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/example-swift/FileFiller-swift/FileFiller-swift.xcodeproj/xcshareddata/xcschemes/: FileFiller-swift.xcscheme
inc/: C_FileFiller.h  FileFiller.hpp  FileFillerTagFactory.hpp
resources/: file1.txt.in
resources/tests/FileFillerTagFactory/: tags.csv
resources/tests/multipleLines/: multipleLines-expected-missing-value.txt  multipleLines-output.txt  multipleLines-tags-missing-tag.csv  multipleLines-tags-missing-value-and-semi-colon.csv  multipleLines-tags-missing-value.csv  multipleLines-tags.csv  multipleLines.txt.in
resources/tests/multipleTags/: multipleTags-output.txt  multipleTags.txt.in
resources/tests/removeLines/: removeLines-expected.txt  removeLines-tags.csv  removeLines.txt.in
resources/tests/removeLines-EoF-NL/: removeLines-expected.txt  removeLines.txt.in
src/: CMakeLists.txt  C_FileFiller.cpp  FileFiller.cpp  FileFillerTagFactory.cpp  main.cpp
swift/: FileFiller.swift
tests/: CMakeLists.txt  main.cpp
