# 
#                     Copyright (C) 2020 Clovis Durand
# 
# -----------------------------------------------------------------------------

# Definitions ---------------------------------------------
add_definitions(-DEXAMPLE)

# Sub-directories -----------------------------------------
# Add subdirectories using add_subdirectory(example_program_1)
